Format Go files on save, set <leader> to spacebar and change mappings to use <leader> instead of <C>

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,5 @@
 {
 	"rust-analyzer.inlayHints.refreshOnInsertMode": true,
 	"rust-analyzer.updates.channel": "nightly",
-	"coc.preferences.formatOnSaveFiletypes": ["rust"]
+	"coc.preferences.formatOnSaveFiletypes": ["rust", "go"]
 }
