Show errors inline as virtualtext, make them look pretty and make bg a little bit darker to match my vscode setup

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,7 @@
 {
 	"rust-analyzer.inlayHints.refreshOnInsertMode": true,
 	"rust-analyzer.updates.channel": "nightly",
-	"coc.preferences.formatOnSaveFiletypes": ["rust", "go"]
+	"coc.preferences.formatOnSaveFiletypes": ["rust", "go"],
+	"diagnostic.virtualText": true,
+	"diagnostic.virtualTextCurrentLineOnly": false
 }
