--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,7 +1,7 @@
 {
 	"rust-analyzer.inlayHints.refreshOnInsertMode": true,
 	"rust-analyzer.updates.channel": "nightly",
-	"coc.preferences.formatOnSaveFiletypes": ["rust", "go"],
+	"coc.preferences.formatOnSaveFiletypes": ["rust", "go", "typescriptreact", "typescript"],
 	"diagnostic.virtualText": true,
 	"diagnostic.virtualTextCurrentLineOnly": false
 }
